# learning-drifting

./: README.md  pyproject.toml
src/learning_drifting.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/learning_drifting/methods/: __init__.py  vanilla_drifting.py
src/learning_drifting/models/: __init__.py  mlp.py
src/learning_drifting/train/: train_cli.py
src/learning_drifting/train/prepare_dataset/: __init__.py  toy_datasets.py
src/learning_drifting/utils/: utils.py  visualization.py
